adding routing foundation

--- a/project sapphire/src/index.css
+++ b/project sapphire/src/index.css
@@ -30,7 +30,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
-
+div.cal
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -55,15 +55,4 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+
